fixing letter spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;700&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -40,8 +41,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Effra', 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Effra', "Noto Sans Georgian",
     sans-serif;
   font-display: swap;
   -webkit-font-smoothing: antialiased;
@@ -49,15 +49,33 @@ body {
   background: var(--background-color);
 }
 
+.letter-spacing {
+  letter-spacing: 3px;
+}
+
+.letter-spacing:lang(ka) {
+  letter-spacing: 2px;
+}
+
+.letter-spacing-medium {
+  letter-spacing: 2px;
+}
+
+.letter-spacing-medium:lang(ka) {
+  letter-spacing: 1.5px;
+}
+
+.letter-spacing-small {
+  letter-spacing: 1.8px;
+}
+
+.letter-spacing-small:lang(ka) {
+  letter-spacing: 1px;
+}
+
 body.darkmode-body {
   background-color: var(--color-two);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 
 .imageUrl {
   width: 200px;
