--- a/css/hero.css
+++ b/css/hero.css
@@ -9,6 +9,11 @@
         "box-1 box-1 box-2 box-2"
         "box-1 box-1 box-4 box-3";
     margin: 50px auto 50px auto;
+    letter-spacing: 3px;
+}
+
+.hero-grid:lang(ka) {
+    letter-spacing: 1.5px;
 }
 
 .box-overlay {
