--- a/css/services.css
+++ b/css/services.css
@@ -29,7 +29,6 @@
     height: 150px;
     background-color: white;
     padding: 1rem;
-    border-radius: 10px;
     grid-auto-columns: auto 1fr;
     grid-auto-rows: auto 1fr;
     grid-template-areas:
